# semantic-recommender

./: .gitattributes  .gitignore  LICENSE  Makefile  README.md  requirements.txt
notebooks/: clustering.ipynb  tests.ipynb
src/nlp/: build_embeddings.py  config.py  dataset.py  generate_query.py
src/recommender/: CMakeLists.txt  main.cpp  search_engine.cpp  search_engine.hpp  utils.cpp  utils.hpp
